--- a/report/static/report/style.css
+++ b/report/static/report/style.css
@@ -1,8 +1,16 @@
+
+
 li a {
     color: brown;
 }
 
 body {
     padding-left: 15px;
-    background: beige url("images/background.jpg") repeat-y right bottom;
+    background: #FAF0EB  url("images/background.jpg") repeat-y right bottom;
+}
+
+.sidebar-nav {
+    margin-top: 20px;
+    padding: 0;
+    list-style: none;
 }
