--- a/report/templates/report/base_generic.html
+++ b/report/templates/report/base_generic.html
@@ -22,11 +22,11 @@
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-1">
       {% block sidebar %}
       <ul class="sidebar-nav">
           <li><a href="{% url 'report:index' %}">Home</a></li> 
-          <li><a href="">All customers</a></li>
+          <li><a href="{% url 'report:customers' %}">All customers</a></li>
           <li><a href="">All pickups</a></li>
 	  <li><a href="">All items</a></li>
       </ul>
@@ -34,9 +34,26 @@
       </div>
       <div class="col-sm-10 ">
       {% block content %}{% endblock %}
+
+      {% block pagination %}
+	{% if is_paginated %}
+	  <div class="pagination">
+            <span class="page-links">
+              {% if page_obj.has_previous %}
+                <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+              {% endif %}
+              <span class="page-current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+              </span>
+              {% if page_obj.has_next %}
+                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+              {% endif %}
+            </span>
+          </div>
+	{% endif %}
+      {% endblock %}
       </div>
     </div>
-
   </div>
 </body>
 </html>
