Report added tables

--- a/report/templates/report/customer_list.html
+++ b/report/templates/report/customer_list.html
@@ -6,7 +6,7 @@
     {% if customer_list %}
     <ul>
       <table summary="no_orderDate">
-      <tr><th>Customer ID</th><th>Customer name</th>
+      <th>Customer ID</th><th>Customer name</th>
       {% for customer in customer_list %}
       <tr>
 	<td>{{ customer.id }}</td>
