--- a/report/static/report/style.css
+++ b/report/static/report/style.css
@@ -18,4 +18,13 @@ body {
 
 table {
     table-layout: fixed;
+    border-spacing: 10px 0;
+}
+
+th {
+  padding: 1px 1px;
+}
+
+td {
+  padding: 1px 1px;
 }
