--- a/report/templates/report/customer_list.html
+++ b/report/templates/report/customer_list.html
@@ -10,7 +10,7 @@
       {% for customer in customer_list %}
       <tr>
 	<td>{{ customer.id }}</td>
-	<td><a href="{% url 'report:customer-pickup' customer.id %}">{{ customer.customername }}</a></td>
+	<td><a href="{% url 'report:customer-pickup' customer.id %}" target="_blank">{{ customer.customername }}</a></td>
       </tr>
       {% endfor %}
     </ul>
