--- a/report/templates/report/customer_donated_item_list.html
+++ b/report/templates/report/customer_donated_item_list.html
@@ -1,15 +1,15 @@
 {% extends "report/base_generic_no_navbar.html" %}
 
 {% block content %}
-    <h1>Pickup Item List </h1>
+    <h1>Donated Item List </h1>
     <div style="text-align:center" >
      <button onclick="goBack()" class="btn btn-dark">Go Back</button>
     </div>
     <br>
      <br>
     {% if item_list %}
-      <table summary="itemsperpickup">
-      <tr><th>Item ID</th><th>Item status</th><th>Item category</th><th>Item segment</th><th>Item type</th><th>Item brand</th><th>Item profit</th><th>Customer payout</th><th>Donation value</th><th>Donation location</th>
+      <table summary="itemsperpickup" style="width:90%" >
+      <tr><th>Item ID</th><th>Item status</th><th>Item category</th><th>Item segment</th><th>Item type</th><th>Item brand</th><th>Donation value</th><th>Donation location</th>
       {% for item in item_list %}
       <tr>
         <td>{{ item.id }}</td>
@@ -18,8 +18,6 @@
 	<td>{{ item.item_segment }}</td>
 	<td>{{ item.item_type }}</td>
 	<td>{{ item.item_brand }}</td>
-	<td>{{ item.item_profit }}</td>
-	<td>{{ item.customerpayout }}</td>
 	<td>{{ item.item_donationvalue }}</td>
 	<td>{{ item.item_location }}</td>
       </tr>
