--- a/static/report/style.css
+++ b/static/report/style.css
@@ -6,7 +6,7 @@ li a {
 
 body {
     padding-top: 230px;
-    
+    font-family: Trebuchet MS;
     background: #FAF0EB  url("images/background.jpg") repeat-x top left;
 }
 
