--- a/report/templates/report/pickup_item_list.html
+++ b/report/templates/report/pickup_item_list.html
@@ -13,7 +13,7 @@
       {% for item in item_list %}
       <tr>
         <td>{{ item.id }}</td>
-	<td>{{ item.item_status }}</td>
+	<td>{{ item.customerfacingstatus }}</td>
 	<td>{{ item.item_category }}</td>
 	<td>{{ item.item_segment }}</td>
 	<td>{{ item.item_type }}</td>
